2008-09-02  ckuhl	<ckuhl@ipb-halle.de>
	* R/elements.R: added Deuterium

2008-08-11  sneumann  <sneumann@ipb-halle.de>

	* R/elements.R (initializeCharges): added initializeCharges, which
	can be useful for getMolecule("H3O+", elements=c(initializeCHNOPS(),initializeCharges()))
	* R/Rdisop.R: fixed important bug which always initialised the
	full PSE when supplying a special elements list
	
2008-04-23  sneumann  <sneumann@ipb-halle.de>

	* R/elements.R: fixed some masses/abundances, 
	                added more elements

2008-02-15  sneumann  <sneumann@kons.ipb-sub.ipb-halle.de>

	* R/elements.R (initializePSE): Fixed Mass of Na isotope

2007-12-04  sneumann  <sneumann@ipb-halle.de>

	* configure.win, src/Makevars.win, src/win/*: Fix Windows build

2007-12-04  sneumann  <sneumann@ipb-halle.de>

	* R/Rdisop.R, man/decomposeMass.Rd: added absolute mass deviation

2007-10-29  begert  <begert@ipb-halle.de>

	* R/elements.R: Fixed O mass

2007-10-19  sneumann  <sneumann@ipb-halle.de>

	* NAMESPACE: Re-enabled useDynLib(libims) to fix Linux Build

2007-10-15  sneumann  <sneumann@ipb-halle.de>

	* configure.win, src/Makevars.win: Fix Windows build

2007-10-14  Steffen Neumann  <sneumann@ipb-halle.de>

	* man: fixed some manpages 

2007-07-26  sneumann  <sneumann@ipb-halle.de>

	* removed several get*Masses in favour of getMass
	* polished vignette

2007-07-11  sneumann  <sneumann@ipb-halle.de>

	* R/elements.R, R/Rdisop.R: Formatting changes
	* configure.in: disabled autogen for imslib

2007-07-09  sneumann  <sneumann@ipb-halle.de>

	* DESCRIPTION (Version): bumped Version following BioC scheme

2007-07-03  sneumann  <sneumann@ipb-halle.de>

	* src/disop.cpp: Clear error Message before running 

2007-06-14  sneumann  <sneumann@ipb-halle.de>

	* R/Rdisop.R: removed CHNOPS warning message
	* Windows: first Windows build

2007-06-07  sneumann  <sneumann@ipb-halle.de>

	* R/Rdisop.R (decomposeMass): fixed call

2007-06-05  sneumann  <sneumann@ipb-halle.de>
